Tab Spacing Fixed

--- a/app/assets/stylesheets/tabs.css.scss
+++ b/app/assets/stylesheets/tabs.css.scss
@@ -245,7 +245,7 @@ p {
 .cutOutContainer {
     position: absolute;
     z-index: 10;
-    width: 370px;
+    width: 369px;
     height: 330px;
     overflow: hidden;
 }
@@ -302,7 +302,7 @@ p {
 .cutOutRight {
     position: absolute;
     margin-top: 191px;
-    width: 99%;
+    width: 100%;
     z-index: 10;
 }
 
